<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_background"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/TitleStyle" />

        <Button
            android:id="@+id/btn_login"
            style="@style/ButtonStyle"
            android:text="@string/login" />

        <Button
            android:id="@+id/btn_register"
            style="@style/ButtonStyle"
            android:text="@string/register" />

        <Button
            android:id="@+id/btn_recover_password"
            style="@style/ButtonStyle"
            android:text="@string/recover_password" />

        <Button
            android:id="@+id/btn_dates"
            style="@style/ButtonStyle"
            android:text="@string/dates" />

        <Button
            android:id="@+id/btn_tracking"
            style="@style/ButtonStyle"
            android:text="@string/tracking" />

        <Button
            android:id="@+id/btn_add_food"
            style="@style/ButtonStyle"
            android:text="@string/add_food" />

        <Button
            android:id="@+id/btn_preferences"
            style="@style/ButtonStyle"
            android:text="@string/preferences" />
    </LinearLayout>
</ScrollView>
