<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <EditText
            android:id="@+id/edit_username"
            android:hint="@string/hint_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/md_theme_primary"
            android:hintTextColor="@color/md_theme_onBackground"
            android:textColor="@color/md_theme_onSurface" />

        <EditText
            android:id="@+id/edit_email"
            android:hint="@string/hint_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/md_theme_primary"
            android:hintTextColor="@color/md_theme_onBackground"
            android:textColor="@color/md_theme_onSurface" />

        <EditText
            android:id="@+id/edit_password"
            android:hint="@string/hint_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/md_theme_primary"
            android:hintTextColor="@color/md_theme_onBackground"
            android:textColor="@color/md_theme_onSurface" />

        <Button
            android:id="@+id/btn_register"
            android:text="@string/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/md_theme_primary"
            android:textColor="@color/md_theme_onPrimary" />
    </LinearLayout>
</ScrollView>
