<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/md_theme_background"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <!-- Título -->
        <TextView
            android:id="@+id/tv_add_food_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_food"
            android:textSize="24sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/md_theme_primary"
            android:layout_gravity="center"
            android:paddingBottom="16dp" />

        <!-- Nombre del alimento -->
        <EditText
            android:id="@+id/et_food_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/food_name"
            android:inputType="text"
            android:backgroundTint="@color/md_theme_primary"
            android:padding="12dp"
            android:layout_marginTop="8dp" />

        <!-- Cantidad -->
        <EditText
            android:id="@+id/et_food_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            android:inputType="numberDecimal"
            android:backgroundTint="@color/md_theme_primary"
            android:padding="12dp"
            android:layout_marginTop="12dp" />

        <!-- Unidad de medida -->
        <Spinner
            android:id="@+id/spinner_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/md_theme_primary" />

        <!-- Categoría -->
        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/md_theme_primary" />

        <!-- Botón Guardar -->
        <Button
            android:id="@+id/btn_save_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:backgroundTint="@color/md_theme_primary"
            android:textColor="@android:color/white"
            android:layout_marginTop="24dp"
            android:padding="12dp" />
    </LinearLayout>
</ScrollView>
